--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
             <!-- Desktop Icons -->
         <div class="folder" name="newFolder" style="top:75px; left:100px;">
-            <span>New Folder</span>
+            <span>Goverment Website</span>
         </div>
 
         <div class="document" id="instructions" style="top:200px; left:75px;"  data-toggle="modal" data-target="#instructionsModal">
-            <span>instructions.txt</span>
+            <span>hacks.txt</span>
         </div>
 
-        <div class="notepad" data-title="Instructions.txt - Notpad.exe">
+        <div class="notepad" data-title="Instructions.txt - Notepad.exe">
             <span class="notepad-title">Instructions.txt - Notepad.exe</span>
             <span class="notepad-text"><p>The objective of minesweeper is to locate all of the mines as quickly as possible. This is done by clearing all non-mine tiles. If you suspect a tile of being a mine, you can mark it by right clicking to plant a flag. Right clicking again, will replace it with a question mark, and a third right click will return the tile to its original state.
                     Left clicking will open a tile, revealing what type of tile it is. Tiles may be either:</p>
@@ -61,11 +61,11 @@
         </div>
 
         <div class="folder" name="newFolder" style="top:325px; left:125px;">
-            <span>New Folder (1)</span>
+            <span>goverment</span>
         </div>
 
         <div class="folder" name="newFolder" style="top:450px; left:100px;">
-            <span>New Folder (2)</span>
+            <span>jimmy</span>
         </div>
 
         <div class="post-it-note" id="post-it" style="top:75px; left:685px;">
@@ -119,11 +119,6 @@
         </div>
 
 
-        <div class="footer">
-            <div class="container">
-                <p class="text-muted">&copy; 2017 by <a href="//www.reedjones.com">Reed Jones</a></p>
-            </div>
-        </div>
 
         <!-- JQuery -->
         <script
