--- a/index.html
+++ b/index.html
@@ -98,17 +98,16 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">How To Play Minesweeper!</h4>
+                    <h4 class="modal-title">How To hack Minesweeper!</h4>
                 </div>
                 <div class="modal-body">
-                    <p>The objective of minesweeper is to locate all of the mines as quickly as possible. This is done by clearing all non-mine tiles. If you suspect a tile of being a mine, you can mark it by right clicking to plant a flag. Right clicking again, will replace it with a question mark, and a third right click will return the tile to its original state.
-                    Left clicking will open a tile, revealing what type of tile it is. Tiles may be either:</p>
+                    <p>Encrypted</p>
                         <ul>
-                            <li>A Mine (this ends the game)</li>
-                            <li>A Number</li>
-                            <li>Empty</li>
+                            <li>Encrypted</li>
+                            <li>Encrypted</li>
+                            <li>Encrypted</li>
                         </ul>
-                    <p>If a mine is revealed, you lose. If the tile you cleared is empty, the board will open up until it reaches number tiles in every direction. These "numbered tiles" indicate the number of mines adjacent to that specific tile and range from 1 to 8. The number of remaining mines are indicated by the numbers on the top left of the board. The top right is the timer and indicates how many seconds you have been working on this puzzle, but don't wory about that until you start getting the hang if the game! When you first load the page, the game defaults to hard mode, Under the game options, you will find medium, and easy. These levels scale both the size of the board, and the number of mines to be found. Hard is a 16 x 30 board with 99 mines. Medium is a 16 x 16 board with 40 mines. Easy is a 9 x 9 board with 10 mines and is a great place for beginners to start.</p>
+                    <p>Encrypted</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
